# docker-compose-sample

./: .dockerignore  README.md  compose.yaml
backend/: .gitignore  Dockerfile  hf_token.txt  main.py  pyproject.toml
backend/models/: create_llm.py
