[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Takuma Ohtani",email = "ohtani.takuma@htncode.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "accelerate (>=1.6.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "*.py"}]

[tool.poetry.group.dev.dependencies]
# 開発用依存パッケージがあれば追加する

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
